<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- RESTAURANT ITEM FRAGMENT RESOURCES -->
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="restaurant_schedule">Open at</string>
    <string name="user_distance">000</string>
    <string name="workmate_number">(0)</string>
    <string name="restaurant_call">CALL</string>
    <string name="restaurant_like">LIKE</string>
    <string name="restaurant_website">WEBSITE</string>
    <string name="restaurant_opening_open">Open</string>
    <string name="restaurant_opening_close">Close</string>
    <string name="restaurant_opening_unavailable">Unavailable</string>

    <!-- WORKMATE ITEM FRAGMENT RESOURCES -->
    <string name="workmate_select_lunch"> is eating</string>
    <string name="workmate_not_select_lunch"> hasn\'t decide yet</string>

    <!-- TOOLBAR ITEM RESOURCES -->
    <string name="search">Search</string>
    <string name="search_view_hint">Search Restaurant</string>

    <!-- NAVIGATION MENU RESOURCES -->
    <string name="map_title">Map View</string>
    <string name="restaurant_list_title">List View</string>
    <string name="workmates_title">Workmates</string>

    <!-- SPLASHSCREEN RESOURCES -->
    <string name="splashscreen_text" translatable="false">Find a nice restaurant and invite your co-worker for lunch!</string>

    <!-- DRAWER MENU RESOURCES -->
    <string name="lunch_text">YOUR LUNCH</string>
    <string name="settings_text">SETTINGS</string>
    <string name="logout_text">LOGOUT</string>
    <string name="user_name_drawer">User NAME</string>
    <string name="user_mail_drawer">usermail@gmail.com</string>
    <string name="user_lunch_select">Select your lunch</string>

    <!-- NAVIGATION DRAWER RESOURCES -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- RESTAURANT ACTIVITY RESOURCES -->
    <string name="call_btn_unavailable">Phone number unavailable</string>
    <string name="website_btn_unavailable">Website unavailable</string>
    <string name="select_lunch_btn">Lunch select</string>
    <string name="remove_lunch_btn">Lunch remove</string>

    <!-- SETTINGS MENU RESOURCES -->
    <string name="notifications_setting">Notifications:</string>
    <string name="distance_setting">Distance from your locations:</string>
    <string name="remove_setting">Remove your account</string>
    <string name="delete_account_btn">Delete</string>
    <string name="distance_txt">500 m</string>
    <string name="distance_settings_activity_txt"> km</string>
    <string name="delete_account_dialog_warning">Warning !</string>
    <string name="delete_account_dialog_message">Are you sure to want delete your account ?</string>
    <string name="delete_account_dialog_yes_btn">Yes</string>
    <string name="delete_account_dialog_no_btn">No</string>

    <!-- FACEBOOK RESOURCES -->
    <string name="facebook_app_id" translatable="false">278485476780989</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb278485476780989</string>

    <!-- TWITTER RESOURCES -->
    <string name="twitter_consumer_key" translatable="false">REnGruTg0ExCpfq9tZdOUCGIg</string>
    <string name="twitter_consumer_secret" translatable="false">6K5oRjLTySkEsXHFtm51qVLUq39XiFHakb6g4D2Fd9Vzk45ZRf</string>

    <!-- ERROR RESOURCES -->
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection</string>

    <!-- GOOGLE RESOURCES -->
    <string name="title_activity_maps">Map</string>

    <!-- NOTIFICATIONS RESOURCES -->
    <string name="title_notifications">Your lunch Go4Lunch</string>
    <string name="body_notifications">Your lunch will be at </string>
    <string name="with_notifications"> with </string>
    <string name="nobody_notifications">nobody</string>

</resources>
