<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/restaurant_name"
                android:textSize="@dimen/text_restaurant_name"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/restaurant_fragment_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/restaurant_location"
                android:textSize="@dimen/text_restaurant_location"
                />

            <TextView
                android:id="@+id/restaurant_fragment_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/restaurant_schedule"
                android:textSize="@dimen/text_restaurant_schedule"
                android:textStyle="italic"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/restaurant_fragment_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/restaurant_fragment_picture"
            android:text="@string/user_distance"
            />

        <ImageView
            android:id="@+id/restaurant_fragment_workmates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/restaurant_fragment_workmates_number"
            android:layout_below="@+id/restaurant_fragment_distance"
            android:src="@drawable/ic_workmate_icon_24dp"
            />

        <TextView
            android:id="@+id/restaurant_fragment_workmates_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/workmate_number"
            android:layout_toStartOf="@+id/restaurant_fragment_picture"
            android:layout_alignBottom="@+id/restaurant_fragment_workmates"
            />

        <ImageView
            android:id="@+id/restaurant_fragment_note"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/restaurant_fragment_picture"
            android:layout_below="@+id/restaurant_fragment_workmates"
            android:src="@drawable/ic_star_icon_24dp"
            android:layout_alignBottom="@+id/restaurant_fragment_picture"
            />

        <ImageView
            android:id="@+id/restaurant_fragment_picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            tools:srcCompat="@drawable/ic_launcher_background"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>